Fixed line height so text aligns with placeholder. Fixed other margins

--- a/client/src/css/Notes.css
+++ b/client/src/css/Notes.css
@@ -58,16 +58,16 @@
 
 .notes-input {
     display: inline-block;
-    line-height: 30px;
     max-width: 90%;
     min-width: 90%;
     min-height: 25px;
     height: fit-content;
     overflow-wrap: break-word;
     box-sizing: border-box;
-    margin: 3% var(--notes-margin) 3% var(--notes-margin);
+    margin: 3% 5%;
     border: none;
     color: var(--subtext-color);
     font-family: "Varela Round", sans-serif;
-    background-color: transparent
+    background-color: transparent;
+    line-height: 30px;
 }
